--- a/Frontend/trainingCertificateStyle.css
+++ b/Frontend/trainingCertificateStyle.css
@@ -1,3 +1,8 @@
+table, th, td {
+	border:1px solid black;
+	height: 400px;
+  }
+
 /* trainingCertificate-wrapper */
 .trainingCertificate-wrapper {
 	background: var(--content_background_color);
@@ -14,12 +19,84 @@
 /* trainingCertificateTable */
 .trainingCertificateTable tr td {
 	align-items: center;
-}
-
-.tableWeekDay {
-	writing-mode: vertical-rl;
+	padding: 10px;
 }
 
 .trainingCertificateTable tr td input {
 	border: 0px;
+}
+
+/* tableWeekDay */
+.tableWeekDay {
+	writing-mode: vertical-rl;
+	text-align: center;
+}
+
+/* tableHeader */
+.tableHeader {
+	height: 50px;
+}
+
+/* tableHeaderCell */
+.tableHeaderCell {
+	padding: 10px;
+	height: 50px;
+	background-color: var(--content_background_secondary_color);
+}
+
+/* tableContent */
+.tableContent {
+	height: 400px;
+}
+
+/* trainingActivities */
+.trainingActivities {
+	width: 100%;
+	height: 380px;
+	resize: none;
+	margin: 0px;
+    padding: 0;
+	border: none;
+}
+
+/* trainingActivitiesHours */
+.trainingActivitiesHours {
+	width: 100%;
+	height: 380px;
+	resize: none;
+	margin: 0px;
+    padding: 0;
+	border: none;
+}
+
+/* tableWeekDay */
+.tableWeekDay {
+	background-color: var(--content_background_secondary_color);
+}
+
+/* btn */
+.btn {
+	width: 200px;
+	height: 30px;
+	margin: 3px;
+}
+
+/* btnBox */
+.btnBox {
+	float: right;
+}
+
+/* trainingTotalHours */
+.trainingTotalHours {
+	height: 100%;
+}
+
+/* department */
+.department {
+	height: 100%;
+}
+
+/* totalTableContent */
+.totalTableContentContent {
+	height: 50px;
 }
