--- a/uebersicht/ubersicht_style.css
+++ b/uebersicht/ubersicht_style.css
@@ -1,124 +1,11 @@
-:root {
-	--content_background_color: #ffffff;
-	--body_background_color: #dddddd;
-	--content_headings: #242323;
-	--content_border_color: #6f6e6e;
-	--content_input_placeholder_color: #8c8b8b;
-	--color_accent: #887171;
-}
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: sans-serif;
-}
-
-/* tags */
-body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	background: var(--body_background_color);
-}
-
-input {
-	background: transparent;
-	outline: none;
-	border-width: 2px;
-	border-color: transparent;
-	border-bottom-color: var(--content_border_color);
-	font-size: 16px;
-	color: var(--content_border_color);
-	transition: 0.3s;
-}
-
-input:focus {
-	border-left-color: var(--content_border_color);
-	border-top-color: var(--content_border_color);
-	border-right-color: var(--content_border_color);
-}
-
-input::placeholder {
-	color: var(--content_input_placeholder_color);
-}
-
-/* login-wrapper */
-.login-wrapper {
-	background: var(--content_background_color);
-	color: var(--content_headings);
-	width: 420px;
-	padding: 30px 40px;
-}
-
-.login-wrapper .logo {
-	height: 3em;
-}
-
-.login-wrapper h1 {
-	font-size: 36px;
-}
-
-.login-wrapper .input-box{
-	position: relative;
-	width: 100%;
-	height: 50px;
-	background: transparent;	
-	margin: 30px 0;
-}
-
-.login-wrapper  .btn { 
-	width: 100%;
-	height: 45px; 
-	font-size: 16px; 
-	font-weight: 600;
-}
-
-/* input-box */
-.input-box input {
-	width: 100%;
-	height: 100%;
-	padding: 20px 45px 20px 20px;
-}
-
-.input-box i {
-	position: absolute;
-	right: 20px;
-	top: 50%;
-	transform: translateY(-50%);
-	font-size: 20px;
-	color: var(--content_border_color);
-}
-/* forgot-password */
-.forgot-password{
-	font-size: 14px;
-	margin: -15px 0 15px;
-}
-.forgot-password a {
-	color: var(--color_accent);
-	text-decoration: underline;
-}
-.forgot-password a:hover { 
-	text-decoration: none;
-}
-/* btn */
-.btn {
-	color: var(--content_border_color);
-	background: transparent;
-	border-color: var(--content_border_color);
-	border-width: 3px;
-	cursor: pointer;
-	transition: 0.3s;
-}
-.btn:hover {
-	color: var(--content_background_color);
-	background: var(--color_accent);
-	border-width: 0;
-}
 /*Übersicht CSS*/
+
+.custom-logo-gso{
+	margin-left: 10px;
+}
+
 .tableBackground {
-	background: #8c8b8b;
+	background: #ffffff;
 	border-style: solid;
 	border-radius: 9px;
 	border-color: #242323;
@@ -129,7 +16,7 @@ input::placeholder {
 	display:inline-block;
 	margin: 3px  10% 0 0;
 	justify-content: space-evenly;
-	box-shadow: 10px 10px 10px aqua,
+	box-shadow: 10px 10px 10px rgba(72, 70, 70, 0.71),
 	inset #6f6e6e 0  0 8px 4px;
 	padding: 10px 0 0 ;
 }
@@ -153,12 +40,12 @@ input::placeholder {
 	align-items: center;
 	display: inline-block;
 	justify-content: center;
-	box-shadow: 10px 10px 8px aqua;
+	box-shadow: 10px 10px 8px rgba(141, 141, 125, 0.13);
 }
 
 
 Table th {
-	background: #8c8b8b;
+	background: #efebeb;
     border-style: solid;
     border-radius: 9px;
     border-color: #242323;
@@ -168,13 +55,13 @@ Table th {
 	padding: 10px 10px 10px 10px;
 	/*box-shadow: 4px 4px 4px aqua;*/
 	box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px, rgb(51, 51, 51) 0 0 0 2px,
-	inset #6f6e6e 0  0 8px 4px;
-	font-size: x-large;
+	inset #c0c0c0 0  0 8px 4px;
+	font-size: 14px;
 
 }
 
 Table  td {
-	background: #8c8b8b70;
+	background: #efebeb;
     border-style: solid;
     border-color: #242323;
     border-width: 1px;
@@ -185,15 +72,15 @@ Table  td {
 	box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px, rgb(51, 51, 51) 0 0 0 1px,
 	inset #6f6e6e 0  0 8px 4px;
 	text-align: center;
-	font-size: 30px;
+	font-size: 20px;
 }
 .overview-table_header {
 	width: 100%;
 	margin: 0 1% 98%;
 }
 Table td img {
-	width: 60px;
-    height: 60px;
+	width: 40px;
+    height: 40px;
 }
 
 td#name {
@@ -246,16 +133,16 @@ button {
 	background: none;
 	font-size: 45px !important;
 }
+
 input#search{
 	margin-top: 10px;
 	height: 35px;
 	text-align: center;
-
 }
 
 label {
 	margin-top: 3%;
-	font-size: 75px;
+	font-size: 55px;
 	text-align: center;
 	display: flex;
 	justify-content: center;
@@ -266,14 +153,19 @@ form {
     justify-content: center;
 	padding: 13px 0;
 }
+
 span {
 	transform: rotate(32grad);
 }
+
 span:hover {
 	transform: rotate(0deg);
 	background-color: rgba(159, 153, 153, 0.41);
 	opacity: 0.5;
 	border-radius: 75%;
-	background: dimgray;
+	background: rgba(255, 255, 255, 0.94);
+}
+table{
+	margin: 10px 0 0 ;
 }
 
