--- a/uebersicht/ubersicht_style.css
+++ b/uebersicht/ubersicht_style.css
@@ -5,7 +5,7 @@
 }
 
 .tableBackground {
-	background: #ffffff;
+    background: #fdfdfd;
 	border-style: solid;
 	border-radius: 9px;
 	border-color: #242323;
@@ -163,9 +163,9 @@ span:hover {
 	background-color: rgba(159, 153, 153, 0.41);
 	opacity: 0.5;
 	border-radius: 75%;
-	background: rgba(255, 255, 255, 0.94);
 }
 table{
 	margin: 10px 0 0 ;
 }
+
 
