--- a/nav_bar/navbarcss.css
+++ b/nav_bar/navbarcss.css
@@ -102,7 +102,15 @@ img#logo{
         opacity: 1;
     }
     ul.submenu{
-        margin-left:25%
+        margin-left: 10%
+    }
+
+    nav.navbar{
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+    .nav-item{
+        margin: 15px 20px;
     }
 
 }
