--- a/Frontend/trainingCertificateStyle.css
+++ b/Frontend/trainingCertificateStyle.css
@@ -1,6 +1,5 @@
 table, th, td {
 	border:1px solid black;
-	height: 400px;
   }
 
 /* trainingCertificate-wrapper */
@@ -12,7 +11,7 @@ table, th, td {
 }
 
 /* trainingCertificate-form */
-.trainingCertificate-form > * {
+.trainingCertificate-wrapper > * {
     margin: 5px;
 }
 
@@ -46,26 +45,22 @@ table, th, td {
 
 /* tableContent */
 .tableContent {
-	height: 400px;
+	height: 100%;
 }
 
 /* trainingActivities */
 .trainingActivities {
 	width: 100%;
-	height: 380px;
+	height: 100%;
 	resize: none;
-	margin: 0px;
-    padding: 0;
 	border: none;
 }
 
 /* trainingActivitiesHours */
 .trainingActivitiesHours {
 	width: 100%;
-	height: 380px;
+	height: 100%;
 	resize: none;
-	margin: 0px;
-    padding: 0;
 	border: none;
 }
 
@@ -99,4 +94,47 @@ table, th, td {
 /* totalTableContent */
 .totalTableContentContent {
 	height: 50px;
+}
+
+/* weekdays */
+.monday {
+	height: 50px;
+}
+
+.tuesday {
+	height: 50px;
+}
+
+.wednesday {
+	height: 50px;
+}
+
+.thursday {
+	height: 50px;
+}
+
+.friday {
+	height: 50px;
+}
+
+.saturday {
+	height: 50px;
+}
+
+/* addRowButton */
+.addRowButton {
+	border-radius: 50%;
+	height: 20px;
+	width: 20px;
+	text-align: center;
+	border: none;
+	font-size: 15px;
+	background-color: var(--content_background_secondary_color);
+	color: var(--content_background_color)
+}
+
+/* addRowCell */
+.addRowCell {
+	text-align: center; 
+    vertical-align: middle;
 }
