--- a/Frontend/mainStyle.css
+++ b/Frontend/mainStyle.css
@@ -4,7 +4,7 @@
 	--content_headings: #242323;
 	--content_border_color: #6f6e6e;
 	--content_input_placeholder_color: #8c8b8b;
-	--color_accent: #dd4d4d;
+	--color_accent: #5b9bd5;
 }
 
 * {
@@ -61,6 +61,7 @@ input::placeholder {
 
 .btn:hover {
 	color: var(--content_background_color);
+	background: var(--color_accent);
 	border-color: transparent;
 }
 
