--- a/uebersicht_nachweise/ubersicht_style.css
+++ b/uebersicht_nachweise/ubersicht_style.css
@@ -94,19 +94,20 @@ td#name {
 }
 
 button {
-	border-radius: 9px;
+	border-radius: 3px;
 	width: 200%;
 	height: 220%;
-	box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px, rgb(51, 51, 51) 0 0 0 1px,
-	inset  #d7cccc 0  0 8px 500px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
 	text-align: center;
 	font-size: 20px;
 	padding: 0.5rem 0;
 	z-index: 777;
 	position: relative;
 	margin: 5px 1% 0 ;
-	display: block;
 	justify-content: center;
+	background: var(--color_accent);
+    color: #111010;
+	display: inline-block;
 }
 
 .search {
@@ -120,9 +121,9 @@ button {
 	height : 25px;
 	padding: 2px;
 	font-size: 16px;
-	border-radius: 4px;
+	border-radius: 3px;
 	margin-left: 14px;
-		--content_input_placeholder_color: black;
+	--content_input_placeholder_color: black;
 }
 
 #search_button {
@@ -160,12 +161,49 @@ span {
 
 span:hover {
 	transform: rotate(0deg);
-	background-color: rgba(159, 153, 153, 0.41);
 	opacity: 0.5;
 	border-radius: 75%;
 }
+
 table{
 	margin: 10px 0 0 ;
 }
 
+/*Hide things*/
+.burger-menu{
+	display: none;
+}
+#button3{
+	display: none;
+}
+.azubi_info{
+	display: none;
+}
 
+/*links*/
+a {
+	text-decoration: none;
+    color: #242323;
+}
+
+@media sceen and (max-width: 1340px){
+}
+
+@media screen and (max-width: 768px){
+			ul.navbar-nav{
+			display: none;
+	}
+	        label {
+			font-size: 25px;
+	}
+		.burger-menu {
+			display:block;
+			margin-right:20%;
+	}
+		input#search{
+			max-width: 60%;
+	}
+		.nav-item{
+			margin-top: 10px;
+		}
+}
