--- a/Frontend/mainStyle.css
+++ b/Frontend/mainStyle.css
@@ -5,6 +5,7 @@
 	--content_border_color: #6f6e6e;
 	--content_input_placeholder_color: #8c8b8b;
 	--color_accent: #dd4d4d;
+	--content_background_secondary_color: #5b9ad5;
 }
 
 * {
