Addded Error Message

--- a/Frontend/mainStyle.css
+++ b/Frontend/mainStyle.css
@@ -6,6 +6,7 @@
 	--content_input_placeholder_color: #8c8b8b;
 	--color_accent: #dd4d4d;
 	--content_background_secondary_color: #5b9ad5;
+	--error_color: #ff0000;
 }
 
 * {
