--- a/Frontend/loginStyle.css
+++ b/Frontend/loginStyle.css
@@ -58,3 +58,11 @@
 	font-size: 20px;
 	color: var(--content_border_color);
 }
+
+/* errorMessage */
+.errorMessage {
+	display: flex;
+	justify-content: center;
+	color: var(--error_color);
+	margin-top: 5px;
+}
