--- a/Frontend/mangmentAndConfigurationStyle.css
+++ b/Frontend/mangmentAndConfigurationStyle.css
@@ -51,3 +51,9 @@
 .trainingStart {
     width: 200px;
 }
+
+.mangmentAndConfiguration-wrapper {
+    margin-left: 20px;
+    margin-right: 20px;
+	display: grid;
+}
