--- a/Frontend/mainStyle.css
+++ b/Frontend/mainStyle.css
@@ -60,7 +60,7 @@ input::placeholder {
 .btn:hover {
 	color: var(--content_background_color);
 	background: var(--color_accent);
-	border-width: 0px;
+	border-width: 0;
 }
 
 /* flexbox */
